# markov

./: .gitignore  .travis.yml  Cargo.toml  README.md  conquest_of_bread  corpus  jabberwocky  koran  koran_prep  search-index.js  test
examples/: graph.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js
implementors/markov/: trait.Chainable.js
implementors/rustc-serialize/serialize/: trait.Decodable.js  trait.Encodable.js
markov/: index.html  stability.html  stability.json  struct.Chain.html  struct.InfiniteChainIterator.html  struct.SizedChainIterator.html  trait.Chainable.html  type.InfiniteChainStringIterator.html  type.SizedChainStringIterator.html
rustc-serialize/json/: enum.EncoderError.html
src/: lib.rs
src/markov/: lib.rs.html
tests/: skeptic.rs
