[package]
name = "markov"
version = "1.1.0"
description = "A generic markov chain implementation in Rust."
authors = ["Aaron Weiss <aweiss@hey.com>"]
license = "CC0-1.0"
keywords = ["markov", "chain", "probability"]
documentation = "https://docs.rs/markov/"
repository = "https://github.com/aatxe/markov"
readme = "README.md"
exclude = [
    "conquest_of_bread",
    "jabberwocky",
    "koran",
    "test",
]

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "aatxe/markov" }

[features]
default = ["graph", "markgen", "yaml"]
graph = ["petgraph", "itertools"]
markgen = ["getopts"]
yaml = ["serde_yaml"]

[dependencies]
getopts = { version = "0.2.21", optional = true }
itertools = { version = "0.10.1", optional = true }
petgraph = { version = "0.6.0", optional = true }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
rand = "0.8.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = { version = "0.8.20", optional = true }
